kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  type: ClusterIP
  selector:
    app: nginx
